--- a/index.html
+++ b/index.html
@@ -233,17 +233,36 @@
             <h2 class="section-title">시공실적</h2>
             <p class="section-subtitle">거산 ENG의 주요 프로젝트를 소개합니다. 클릭하여 상세 내용을 확인하세요.</p>
             <div class="portfolio-grid-new">
-                <!-- 월산중학교 배전반 프로젝트 -->
+                <!-- 김해 삼성초등학교 (최신) -->
+                <a href="project-samsung-2026.html" class="portfolio-card">
+                    <div class="portfolio-card-image">
+                        <img src="images/samsung-1.jpg" alt="김해 삼성초등학교 일체형 수배전반 철거 및 설치">
+                        <div class="portfolio-card-overlay">
+                            <span class="view-detail">자세히 보기 <i class="fas fa-arrow-right"></i></span>
+                        </div>
+                    </div>
+                    <div class="portfolio-card-content">
+                        <span class="portfolio-date">2026년 1월 31일</span>
+                        <h4>김해 삼성초등학교 [일체형 수배전반 철거 및 설치]</h4>
+                        <p>일체형 수배전반 철거 및 신규 설치</p>
+                        <div class="portfolio-tags">
+                            <span>수배전반</span>
+                            <span>철거·설치</span>
+                        </div>
+                    </div>
+                </a>
+                
+                <!-- 김해 월산중학교 (이전) -->
                 <a href="project-wolsan-2025.html" class="portfolio-card">
                     <div class="portfolio-card-image">
-                        <img src="images/wolsan-01.png" alt="월산중학교 배전반 분해조립">
+                        <img src="images/wolsan-01.png" alt="김해 월산중학교 배전반 분해조립">
                         <div class="portfolio-card-overlay">
                             <span class="view-detail">자세히 보기 <i class="fas fa-arrow-right"></i></span>
                         </div>
                     </div>
                     <div class="portfolio-card-content">
                         <span class="portfolio-date">2025년 2월 22일</span>
-                        <h4>월산중학교 [배전반 분해조립 설치]</h4>
+                        <h4>김해 월산중학교 [배전반 분해조립 설치]</h4>
                         <p>22.9kV 특고압 패널 및 변압기 설치</p>
                         <div class="portfolio-tags">
                             <span>배전반</span>
@@ -251,18 +270,6 @@
                         </div>
                     </div>
                 </a>
-                
-                <!-- 추가 프로젝트 예시 (추후 추가 가능) -->
-                <div class="portfolio-card coming-soon">
-                    <div class="portfolio-card-image placeholder">
-                        <i class="fas fa-hard-hat"></i>
-                    </div>
-                    <div class="portfolio-card-content">
-                        <span class="portfolio-date">Coming Soon</span>
-                        <h4>새로운 프로젝트</h4>
-                        <p>더 많은 시공실적이 곧 업데이트됩니다</p>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
