--- a/project-samsung-2026.html
+++ b/project-samsung-2026.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>김해 월산중학교 배전반 분해조립 설치 - 거산 ENG</title>
+    <title>김해 삼성초등학교 일체형 수배전반 철거 및 설치 - 거산 ENG</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="project-detail.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&display=swap" rel="stylesheet">
@@ -41,12 +41,12 @@
 
             <!-- 프로젝트 헤더 -->
             <div class="project-header">
-                <span class="project-date">2025년 2월 22일</span>
-                <h1 class="project-title">김해 월산중학교 배전반 분해조립 설치</h1>
+                <span class="project-date">2026년 1월 31일</span>
+                <h1 class="project-title">김해 삼성초등학교 [일체형 수배전반 철거 및 설치]</h1>
                 <div class="project-tags">
-                    <span class="tag"><i class="fas fa-map-marker-alt"></i> 김해 월산중학교</span>
-                    <span class="tag"><i class="fas fa-tools"></i> 배전반 분해조립</span>
-                    <span class="tag"><i class="fas fa-bolt"></i> 22.9kV 특고압</span>
+                    <span class="tag"><i class="fas fa-map-marker-alt"></i> 김해 삼성초등학교</span>
+                    <span class="tag"><i class="fas fa-tools"></i> 일체형 수배전반</span>
+                    <span class="tag"><i class="fas fa-exchange-alt"></i> 철거 및 설치</span>
                 </div>
             </div>
 
@@ -55,29 +55,29 @@
                 <h2>작업 개요</h2>
                 <div class="overview-content">
                     <p>
-                        월산중학교 전기실 내 노후화된 배전반 설비의 분해 및 신규 설비 조립 설치 작업입니다. 
-                        22.9kV 특고압 패널 및 변압기 설치 공사를 수행하였습니다.
+                        김해 삼성초등학교 전기실 내 노후화된 일체형 수배전반 설비의 철거 및 신규 설비 설치 작업입니다.
+                        안전한 전력 공급을 위한 수배전반 교체 공사를 수행하였습니다.
                     </p>
                     <div class="overview-details">
                         <div class="detail-item">
                             <i class="fas fa-calendar-alt"></i>
                             <div>
                                 <strong>작업일</strong>
-                                <span>2025년 2월 22일</span>
+                                <span>2026년 1월 31일</span>
                             </div>
                         </div>
                         <div class="detail-item">
                             <i class="fas fa-building"></i>
                             <div>
                                 <strong>현장</strong>
-                                <span>김해 월산중학교</span>
+                                <span>김해 삼성초등학교</span>
                             </div>
                         </div>
                         <div class="detail-item">
                             <i class="fas fa-clipboard-list"></i>
                             <div>
                                 <strong>작업 내용</strong>
-                                <span>배전반 분해조립 설치</span>
+                                <span>일체형 수배전반 철거 및 설치</span>
                             </div>
                         </div>
                         <div class="detail-item">
@@ -101,62 +101,135 @@
                         <div class="timeline-marker">1</div>
                         <div class="timeline-content">
                             <h3>기존 설비 확인 및 작업 준비</h3>
-                            <p>현장 전기실 내 기존 설비 상태를 확인하고, 안전 조치를 취한 후 분해 작업을 준비합니다.</p>
+                            <p>현장 전기실 내 기존 일체형 수배전반 및 특고압 설비의 상태를 점검하고, 작업 전 안전 조치(전원 차단·접지·위험 구역 설정)를 수행합니다. 철거·설치에 필요한 도구, 자재 및 반입 경로를 확인하여 작업 환경을 조성합니다.</p>
                         </div>
                     </div>
-                    <!-- 2단계: 변압기 반입 및 설치 (제목 위치 교환) -->
+                    <!-- 2단계: 특고압 패널 철거 -->
                     <div class="timeline-item">
                         <div class="timeline-marker">2</div>
                         <div class="timeline-content">
-                            <h3>변압기 반입 및 설치</h3>
-                            <p>중량물 운반 장비를 활용하여 변압기를 안전하게 반입하고 배전반 내에 설치합니다.</p>
+                            <h3>특고압 패널 철거</h3>
+                            <p>노후화된 특고압 패널에 대해 전원 차단, 접지 및 케이블 연결 해제를 순차적으로 진행한 후, 설비를 현장에서 이탈·철거합니다. 작업 안전 규정에 따른 절차를 준수합니다.</p>
                             <div class="timeline-gallery">
-                                <div class="gallery-item" onclick="openLightbox(3)">
-                                    <img src="images/wolsan-04.png" alt="변압기 반입 및 설치 사진 - 1">
+                                <div class="gallery-item" onclick="openLightbox(0)">
+                                    <img src="images/samsung-1.jpg" alt="특고압 패널 철거 사진 - 1">
                                     <div class="gallery-overlay">
                                         <i class="fas fa-search-plus"></i>
-                                        <span>변압기 반입 및 설치 사진 - 1</span>
+                                        <span>특고압 패널 철거 사진 - 1</span>
                                     </div>
                                 </div>
-                                <div class="gallery-item" onclick="openLightbox(4)">
-                                    <img src="images/wolsan-05.png" alt="변압기 반입 및 설치 사진 - 2">
+                                <div class="gallery-item" onclick="openLightbox(1)">
+                                    <img src="images/samsung-2.jpg" alt="특고압 패널 철거 사진 - 2">
                                     <div class="gallery-overlay">
                                         <i class="fas fa-search-plus"></i>
-                                        <span>변압기 반입 및 설치 사진 - 2</span>
+                                        <span>특고압 패널 철거 사진 - 2</span>
                                     </div>
                                 </div>
-                                <div class="gallery-item" onclick="openLightbox(5)">
-                                    <img src="images/wolsan-06.png" alt="변압기 반입 및 설치 사진 - 3">
+                                <div class="gallery-item" onclick="openLightbox(2)">
+                                    <img src="images/samsung-10.jpg" alt="특고압 패널 철거 사진 - 3">
                                     <div class="gallery-overlay">
                                         <i class="fas fa-search-plus"></i>
-                                        <span>변압기 반입 및 설치 사진 - 3</span>
+                                        <span>특고압 패널 철거 사진 - 3</span>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!-- 3단계: 22.9kV 특고압 패널 설치 (제목 위치 교환) -->
+                    <!-- 3단계: 신규 특고압 패널 분해 -->
                     <div class="timeline-item">
                         <div class="timeline-marker">3</div>
                         <div class="timeline-content">
-                            <h3>22.9kV 특고압 패널 설치</h3>
-                            <p>특고압 패널을 정위치에 설치하고, 각종 계기 및 보호장치를 조립합니다.</p>
+                            <h3>신규 특고압 패널 분해</h3>
+                            <p>신규 특고압 패널은 설치 장소(전기실)의 반입로 및 설치 공간 제약으로 인해 일체 상태로 반입이 불가능합니다. 이에 따라 현장 반입 전에 패널을 단위 모듈로 분해하여, 현장 도착 후 재조립이 가능하도록 사전 분해 작업을 수행합니다.</p>
                             <div class="timeline-gallery">
-                                <div class="gallery-item" onclick="openLightbox(2)">
-                                    <img src="images/wolsan-03.png" alt="22.9kV 특고압 패널 설치 사진 - 1">
+                                <div class="gallery-item" onclick="openLightbox(3)">
+                                    <img src="images/samsung-7.jpg" alt="신규 특고압 패널 분해 사진 - 1">
                                     <div class="gallery-overlay">
                                         <i class="fas fa-search-plus"></i>
-                                        <span>22.9kV 특고압 패널 설치 사진 - 1</span>
-                                    </div>
-                                </div>
-                                <div class="gallery-item" onclick="openLightbox(6)">
-                                    <img src="images/wolsan-07.png" alt="22.9kV 특고압 패널 설치 사진 - 2">
-                                    <div class="gallery-overlay">
-                                        <i class="fas fa-search-plus"></i>
-                                        <span>22.9kV 특고압 패널 설치 사진 - 2</span>
+                                        <span>신규 특고압 패널 분해 사진 - 1</span>
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <!-- 4단계: 신규 특고압 패널 운반 -->
+                    <div class="timeline-item">
+                        <div class="timeline-marker">4</div>
+                        <div class="timeline-content">
+                            <h3>신규 특고압 패널 운반</h3>
+                            <p>분해된 신규 특고압 패널을 하역지에서 전기실 설치 위치까지 안전하게 운반합니다. 중량물 취급 규정에 따라 운반 경로를 확보하고, 충격·낙하 방지 조치를 적용하여 반입합니다.</p>
+                            <div class="timeline-gallery">
+                                <div class="gallery-item" onclick="openLightbox(4)">
+                                    <img src="images/samsung-6.jpg" alt="신규 특고압 패널 운반 사진 - 1">
+                                    <div class="gallery-overlay">
+                                        <i class="fas fa-search-plus"></i>
+                                        <span>신규 특고압 패널 운반 사진 - 1</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 5단계: 특고압 변압기 운반 -->
+                    <div class="timeline-item">
+                        <div class="timeline-marker">5</div>
+                        <div class="timeline-content">
+                            <h3>특고압 변압기 운반</h3>
+                            <p>특고압 변압기를 반입 지점에서 전기실 설치 위치까지 운반합니다. 변압기의 중량과 크기를 고려하여 적절한 운반 장비를 사용하고, 접근로 및 설치면의 하중을 검토한 후 안전하게 이송·반입합니다.</p>
+                            <div class="timeline-gallery">
+                                <div class="gallery-item" onclick="openLightbox(5)">
+                                    <img src="images/samsung-5.jpg" alt="특고압 변압기 운반 사진 - 1">
+                                    <div class="gallery-overlay">
+                                        <i class="fas fa-search-plus"></i>
+                                        <span>특고압 변압기 운반 사진 - 1</span>
+                                    </div>
+                                </div>
+                                <div class="gallery-item" onclick="openLightbox(6)">
+                                    <img src="images/samsung-8.jpg" alt="특고압 변압기 운반 사진 - 2">
+                                    <div class="gallery-overlay">
+                                        <i class="fas fa-search-plus"></i>
+                                        <span>특고압 변압기 운반 사진 - 2</span>
+                                    </div>
+                                </div>
+                                <div class="gallery-item" onclick="openLightbox(7)">
+                                    <img src="images/samsung-9.jpg" alt="특고압 변압기 운반 사진 - 3">
+                                    <div class="gallery-overlay">
+                                        <i class="fas fa-search-plus"></i>
+                                        <span>특고압 변압기 운반 사진 - 3</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 6단계: 신규 특고압 패널 설치 -->
+                    <div class="timeline-item">
+                        <div class="timeline-marker">6</div>
+                        <div class="timeline-content">
+                            <h3>신규 특고압 패널 설치</h3>
+                            <p>운반된 신규 특고압 패널을 전기실 내 설치 위치에 정위치한 뒤, 현장에서 분해했던 모듈을 순차적으로 재조립합니다. 조립 완료 후 패널이 이후 변위되지 않도록 앵커 및 고정 장치로 확정 고정합니다.</p>
+                            <div class="timeline-gallery">
+                                <div class="gallery-item" onclick="openLightbox(8)">
+                                    <img src="images/samsung-3.jpg" alt="신규 특고압 패널 설치 사진 - 1">
+                                    <div class="gallery-overlay">
+                                        <i class="fas fa-search-plus"></i>
+                                        <span>신규 특고압 패널 설치 사진 - 1</span>
+                                    </div>
+                                </div>
+                                <div class="gallery-item" onclick="openLightbox(9)">
+                                    <img src="images/samsung-4.jpg" alt="신규 특고압 패널 설치 사진 - 2">
+                                    <div class="gallery-overlay">
+                                        <i class="fas fa-search-plus"></i>
+                                        <span>신규 특고압 패널 설치 사진 - 2</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 7단계: 신규 특고압 패널 설치 완료 -->
+                    <div class="timeline-item">
+                        <div class="timeline-marker">7</div>
+                        <div class="timeline-content">
+                            <h3>신규 특고압 패널 설치 완료</h3>
+                            <p>신규 특고압 패널의 현장 조립·설치 및 고정 작업을 완료하였습니다.</p>
                         </div>
                     </div>
                 </div>
@@ -219,15 +292,17 @@
 
     <script src="script.js"></script>
     <script>
-        // 갤러리 이미지 배열 (페이지에 표시되는 이미지: 인덱스 2~6, 제목별 넘버링)
         const galleryImages = [
-            { src: 'images/wolsan-01.png', caption: '' },
-            { src: 'images/wolsan-02.png', caption: '' },
-            { src: 'images/wolsan-03.png', caption: '22.9kV 특고압 패널 설치 사진 - 1' },
-            { src: 'images/wolsan-04.png', caption: '변압기 반입 및 설치 사진 - 1' },
-            { src: 'images/wolsan-05.png', caption: '변압기 반입 및 설치 사진 - 2' },
-            { src: 'images/wolsan-06.png', caption: '변압기 반입 및 설치 사진 - 3' },
-            { src: 'images/wolsan-07.png', caption: '22.9kV 특고압 패널 설치 사진 - 2' }
+            { src: 'images/samsung-1.jpg', caption: '특고압 패널 철거 사진 - 1' },
+            { src: 'images/samsung-2.jpg', caption: '특고압 패널 철거 사진 - 2' },
+            { src: 'images/samsung-10.jpg', caption: '특고압 패널 철거 사진 - 3' },
+            { src: 'images/samsung-7.jpg', caption: '신규 특고압 패널 분해 사진 - 1' },
+            { src: 'images/samsung-6.jpg', caption: '신규 특고압 패널 운반 사진 - 1' },
+            { src: 'images/samsung-5.jpg', caption: '특고압 변압기 운반 사진 - 1' },
+            { src: 'images/samsung-8.jpg', caption: '특고압 변압기 운반 사진 - 2' },
+            { src: 'images/samsung-9.jpg', caption: '특고압 변압기 운반 사진 - 3' },
+            { src: 'images/samsung-3.jpg', caption: '신규 특고압 패널 설치 사진 - 1' },
+            { src: 'images/samsung-4.jpg', caption: '신규 특고압 패널 설치 사진 - 2' }
         ];
         let currentSlide = 0;
 
@@ -236,7 +311,6 @@
             const lightbox = document.getElementById('lightbox');
             const img = document.getElementById('lightbox-img');
             const caption = document.getElementById('lightbox-caption');
-            
             lightbox.style.display = 'flex';
             img.src = galleryImages[index].src;
             caption.textContent = galleryImages[index].caption;
@@ -252,14 +326,12 @@
             currentSlide += direction;
             if (currentSlide >= galleryImages.length) currentSlide = 0;
             if (currentSlide < 0) currentSlide = galleryImages.length - 1;
-            
             const img = document.getElementById('lightbox-img');
             const caption = document.getElementById('lightbox-caption');
             img.src = galleryImages[currentSlide].src;
             caption.textContent = galleryImages[currentSlide].caption;
         }
 
-        // 키보드 이벤트
         document.addEventListener('keydown', function(e) {
             if (document.getElementById('lightbox').style.display === 'flex') {
                 if (e.key === 'Escape') closeLightbox();
