--- a/project-samsung-2026.html
+++ b/project-samsung-2026.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>김해 삼성초등학교 일체형 수배전반 철거 및 설치 - 거산 ENG</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="project-detail.css">
+    <link rel="stylesheet" href="styles.css?v=20260201">
+    <link rel="stylesheet" href="project-detail.css?v=20260201">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -290,7 +290,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=20260201"></script>
     <script>
         const galleryImages = [
             { src: 'images/samsung-1.jpg', caption: '특고압 패널 철거 사진 - 1' },
