--- a/project-wolsan-2025.html
+++ b/project-wolsan-2025.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>김해 월산중학교 배전반 분해조립 설치 - 거산 ENG</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="project-detail.css">
+    <link rel="stylesheet" href="styles.css?v=20260201">
+    <link rel="stylesheet" href="project-detail.css?v=20260201">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -217,7 +217,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=20260201"></script>
     <script>
         // 갤러리 이미지 배열 (페이지에 표시되는 이미지: 인덱스 2~6, 제목별 넘버링)
         const galleryImages = [
